# my-code-rusted

./: .gitignore  Cargo.toml  README.md  itertools-0.14-rs.wrap  meson.build  regex-1.11-rs.wrap
src/: lib.rs
subprojects/: meval.wrap  rayon.wrap  sfml.wrap
